Home: Bug fixed. Description overlaps images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,7 +140,6 @@ h3{
 .textbox-cont-text p{
     margin-left: auto;
     margin-right: auto;
-    width: 70vw;
 }
 
 .images-cont{
@@ -536,7 +535,6 @@ footer{
     } 
     /*Resizes the description for get started and personal trainer*/
     .textbox-cont-text p{
-        width: 90vw;
         font-size: 90%;
     }
     /*Hides facility description*/
